--- a/templates/login.html
+++ b/templates/login.html
@@ -5,10 +5,10 @@
     <title>Login</title>
 </head>
 <body>
-    <form action="/users/login/" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Создать логин">
-    </form>
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button class="btn btn-primary" type="submit">Log In</button>
+</form>
 </body>
 </html>
