--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,8 @@
                     </div>
                     <form class="header__nav_form" data-modal action="#">
                         <div class="header_nav_form-inner">
-                            <input class="header__nav_input" type="text" placeholder="Search">
-                            <img src="{% static 'header/search.svg' %}" alt="Search" style="z-index: 2;">
+{#                            <input class="header__nav_input" type="text" placeholder="Search">#}
+{#                            <img src="{% static 'header/search.svg' %}" alt="Search" style="z-index: 2;">#}
                         </div>
                     </form>
                     <div class="header__nav_card">
@@ -82,8 +82,8 @@
                                     <img src="{% static 'info/Ellipse 39.png' %}" alt="">
                                 </div>
                                 <div class="info_left_first_person-content">
-                                    <span>Johny Sins</span>
-                                    <p>Manager </p>
+                                    <span>Kim Wu</span>
+                                    <p>Chef Manager</p>
                                 </div>
                             </div>
 
@@ -92,8 +92,8 @@
                                     <img src="{% static 'info/Ellipse 39.png' %}" alt="">
                                 </div>
                                 <div class="info_left_first_person-content">
-                                    <span>Johny Sins</span>
-                                    <p>Manager </p>
+                                    <span>Harry Jhonson</span>
+                                    <p>Chef Manager</p>
                                 </div>
                             </div>
 
@@ -123,19 +123,7 @@
                     <a href="/category/" target="_blank">
                         <button class="btn_category">Сategories</button>
                     </a>
-                    <!--
-                                        <div class="catalog_info_items">
-                                            <div class="catalog_info_item">
-                                                <span>New items</span>
-                                            </div>
-                                            <div class="catalog_info_item">
-                                                <span>Bestsellers</span>
-                                            </div>
-                                            <div class="catalog_info_item">
-                                                <span>Discounts</span>
-                                            </div>
-                                        </div>
-                        -->
+
                 </div>
             </div>
         </div>
@@ -146,6 +134,7 @@
                         <div class="swiper_block_img">
                             <img src="{% static 'slider/slide1.jpg' %}" alt="">
                         </div>
+
                         <span>Antipyretic</span>
                     </div>
                     <div class="swiper_block">
@@ -162,7 +151,7 @@
                     </div>
                     <div class="swiper_block">
                         <div class="swiper_block_img">
-                            <img src="{% static 'slider/slide4.jpg' %}" alt="">
+                            <img src="{% static 'slider/slide1.jpg' %}" alt="">
                         </div>
                         <span>Contraceptives</span>
                     </div>
@@ -200,7 +189,7 @@
                     </div>
                     <div class="swiper_block">
                         <div class="swiper_block_img">
-                            <img src="{% static 'slider/slide4.jpg' %}" alt="">
+                            <img src="{% static 'slider/slide1.jpg' %}" alt="">
                         </div>
                         <span>Contraceptives</span>
                     </div>
@@ -218,31 +207,18 @@
                     </div>
                 </div>
             </div>
-            <div><img class="swiper-button-next" style="width: 46px;height: 30px; margin-right: 40px;"
-                      src="{% static 'categories/Arrow_right.png' %}" alt=""></div>
-            <div><img class="swiper-button-prev" style="width: 46px;height: 30px;"
-                      src="{% static 'categories/Arrow_left.svg' %}" alt=""></div>
+
         </div>
     </section>
     <section class="classification">
         <div class="container">
             <div class="classification_inner">
-                <h2>Classification</h2>
-                <div class="classification_info">
-                    <div class="classification_info_content">
-                        <span>Medicines</span>
-                        <div class="cl_line"></div>
-                    </div>
-                    <div class="classification_info_content">
-                        <span>Medical products</span>
-                        <div class="cl_line"></div>
-                    </div>
-                    <div class="classification_info_content">
-                        <span>Parapharmaceutical products</span>
-                        <div class="cl_line"></div>
-                    </div>
-                    <div class="classification_info_content">
-                        <span>Medical equipment</span>
+                <h2>About Pharmacy</h2>
+
+                <h2>LLC "Zhodorivie Pharmacy" has been present in the pharmaceutical market of
+                    Kyrgyzstan since 1997. The company has a wholesale warehouse with a total area of more than 2000 sq.m.,
+                    which has a fully equipped warehouse and strict compliance with the storage conditions of medicines,
+                    as well as a logistics chain.</h2>
                     </div>
                 </div>
             </div>
@@ -266,7 +242,9 @@
                             <a href="https://wa.me/996708540691" target="_blank">
                                 +996 (708) 540691
                             </a>
-                            +996 (552) 715328
+                            <a href="https://wa.me/996708540691" target="_blank">
+                                +996 (708) 540691
+                            </a>
                         </p>
                     </div>
                 </div>
